[package]
name = "max7797x-driver"
version = "0.1.1"
authors = ["Alex Moon"]
edition = "2021"
description = "An embedded async driver for the MAX77975/MAX77976 battery charger"
documentation = "https://docs.rs/max7797x-driver"
repository = "https://github.com/tactile-eng/max7797x-driver"
license = "Apache-2.0"
keywords = ["embedded-hal-driver", "max77975", "charger"]
categories = ["no-std", "embedded", "asynchronous", "hardware-support"]

[features]
"default" = []
"defmt-03" = ["embedded-hal-async/defmt-03", "dep:defmt"]

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal-async = "1.0.0"
modular-bitfield = "0.11.2"

